force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/leaseworks__Reserve_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Object to keep track of Maintenance Reserve Balance changes.</description>
    <label>Z_Unused 2106 Supplemental Rent History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused 2106 Supplemental Rent History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>