force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Assembly_Eligible_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_Eligible_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relevant Assembly Event</label>
    <referenceTo>leaseworks__Assembly_Eligible_Event__c</referenceTo>
    <relationshipLabel>Supplemental Rent History</relationshipLabel>
    <relationshipName>Reserve_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>