force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Assembly_Maintenance_Event_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_Maintenance_Event_Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relevant maintenance event that may have caused the draw down of the MR balance.</description>
    <inlineHelpText>Relevant maintenance event that may have caused the draw down of the MR balance.</inlineHelpText>
    <label>Relevant MX Event Invoice</label>
    <referenceTo>leaseworks__Constt_Assembly_Eligible_Event_Invoice__c</referenceTo>
    <relationshipLabel>Supplemental Rent History</relationshipLabel>
    <relationshipName>Reserve_Snapshot</relationshipName>
    <type>Lookup</type>
</CustomField>