force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Assembly_MR_Info__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_MR_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Z_Unused 2106 Supplemental Rent History</relationshipLabel>
    <relationshipName>MR_History</relationshipName>
    <type>Lookup</type>
</CustomField>