force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Change_In_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Change_In_Reserve__c</fullName>
    <formula>0.0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Change In Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>