force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Invoice_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Balance_Due__c</fullName>
    <description>Balance Due on Invoice when Snapshot was captured</description>
    <inlineHelpText>Invoices amount minus all payments against this Invoice Line</inlineHelpText>
    <label>Invoice Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>