force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <description>Parent Lease that the snapshot is being recorded for.</description>
    <inlineHelpText>Parent Lease that the snapshot is being recorded for.</inlineHelpText>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Z_Unused 2106 Supplemental Rent History</relationshipLabel>
    <relationshipName>Reserve_Snapshot</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>