force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Snapshot_Date__c</fullName>
    <description>Date for which snapshot is taken</description>
    <inlineHelpText>Date for which snapshot is taken</inlineHelpText>
    <label>Z_Unused_2002 Snapshot Date</label>
    <type>Date</type>
</CustomField>