force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Snapshot_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Snapshot_Sequence_Number__c</fullName>
    <description>Used to identify the sequene of Snapshots in case of multiple records with same snapshot date</description>
    <label>_Snapshot Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>