force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/fields/leaseworks__Y_Hidden_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Event_Id__c</fullName>
    <formula>CASE( leaseworks__Type__c,
      &quot;Assembly Event&quot;, leaseworks__Assembly_Maintenance_Event_Invoice__c,
      &quot;MR Invoice&quot;, leaseworks__Invoice__c,
      &quot;MR Payment&quot;, leaseworks__Payment__c,
      null
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Event Id</label>
    <type>Text</type>
</CustomField>