force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Assembly_MR_Info__c</columns>
    <columns>leaseworks__Event_Type__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Assembly_Event_Info__c</columns>
    <columns>leaseworks__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>