force-app/main/default/objects/leaseworks__Reserve_Snapshot__c/listViews/leaseworks__All1.listView-meta.xml
<ListView>
    <fullName>leaseworks__All1</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Assembly__c</columns>
    <columns>leaseworks__Assembly_MR_Info__c</columns>
    <columns>leaseworks__Change_In_Collected_Reserve__c</columns>
    <columns>leaseworks__Event_Type__c</columns>
    <columns>leaseworks__MR_Fund_Transfer__c</columns>
    <columns>leaseworks__Snapshot_Date__c</columns>
    <columns>leaseworks__Snapshot_Date_F__c</columns>
    <columns>leaseworks__Type__c</columns>
    <columns>leaseworks__Change_In_Reserve__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>